--- a/janusgraph-ignite/pom.xml
+++ b/janusgraph-ignite/pom.xml
@@ -37,7 +37,17 @@
         <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-core</artifactId>
-            <version>2.4.0</version>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-indexing</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-log4j</artifactId>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
            <groupId>com.orbitz.consul</groupId>
@@ -48,6 +58,10 @@
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
+               </exclusion>
+               <exclusion>
+                   <groupId>com.squareup.okhttp3</groupId>
+                   <artifactId>okhttp</artifactId>
                </exclusion>
            </exclusions>
         </dependency>
@@ -64,7 +78,6 @@
                 <directory>${basedir}/src/test/resources</directory>
             </testResource>
         </testResources>
-
         <plugins>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -78,13 +91,47 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-shade-plugin</artifactId>
+              <version>2.4.1</version>
+              <executions>
+                <execution>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>shade</goal>
+                  </goals>
+                  <configuration>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                                <exclude>META-INF/MANIFEST.MF</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                    <relocations>
+                      <relocation>
+                        <pattern>org.apache.lucene</pattern>
+                        <shadedPattern>ignite.org.apache.lucene</shadedPattern>
+                      </relocation>
+                    </relocations>
+                    <transformers>
+                      <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer" />
+                    </transformers>
+                  </configuration>
+                </execution>
+              </executions>
+             </plugin>
         </plugins>
     </build>
 
     <profiles>
         <profile>
             <id>janusgraph-release</id>
-
             <build>
                 <plugins>
                     <!-- Redeclare gpg-plugin after jar-plugin to force the test jar to be signed.
