--- a/janusgraph-test/pom.xml
+++ b/janusgraph-test/pom.xml
@@ -76,6 +76,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>1.4.195</version>
             <scope>test</scope>
         </dependency>
         <dependency>
