--- a/janusgraph-ignite/pom.xml
+++ b/janusgraph-ignite/pom.xml
@@ -126,6 +126,9 @@
                 </execution>
               </executions>
              </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
